--- a/Exam1_2/Infrastructure/Infrastructure.csproj
+++ b/Exam1_2/Infrastructure/Infrastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
@@ -14,6 +14,11 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.8" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.8" />
 		<PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.20" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="UnitOfWorks\" />
+	  <Folder Include="Repositories\" />
 	</ItemGroup>
 
 </Project>
