--- a/Assignment4/Assignment4/Assignment4.csproj
+++ b/Assignment4/Assignment4/Assignment4.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Mono.Reflection" Version="2.0.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
