--- a/assignment5/StockData.Worker/appsettings.json
+++ b/assignment5/StockData.Worker/appsettings.json
@@ -1,8 +1,22 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=Assignment5;User Id=aspnetb7;Password=123456;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Serilog": {
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/web-log-.log",
+          "rollingInterval": "Day"
+        }
+      }
+    ]
   }
 }
